ajout des graphs v2

--- a/src/styles/NavbarV.scss
+++ b/src/styles/NavbarV.scss
@@ -40,7 +40,7 @@
     font-size: 12px;
     transform: rotate(-90deg);
     white-space: nowrap;
-    position: fixed;
+    position: absolute;
     z-index: 3;
     bottom: 80px;
   }
