ajout des graphs v3

--- a/src/styles/UserPerformanceActivity.scss
+++ b/src/styles/UserPerformanceActivity.scss
@@ -1,7 +1,7 @@
 /* src/components/PerformanceChart.scss */
 .perf-chart {
-  width: 258px;
-  height: 263px;
+  width: auto;
+  height: 85%;
   background: #282D30;
   border-radius: 5px;
   padding: 12px;
