--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,9 @@
 .parent{
     display: grid;
-    grid-template-columns: 224px 1fr 1fr 1fr 1fr ;
-    grid-template-rows: 105px auto 2fr 2fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-template-columns: 180px 1fr 1fr 1fr 1fr ;
+    grid-template-rows: 105px 1fr 3fr 2fr;
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
     height: 100vh;
 }
 
@@ -14,4 +14,9 @@
 .div5 { grid-area: 4 / 2 / 6 / 3; }
 .div6 { grid-area: 4 / 3 / 6 / 4; }
 .div7 { grid-area: 4 / 4 / 6 / 5; }
-.div8 { grid-area: 3 / 5 / 6 / 6; }
+.div8 { grid-area: 3 / 5 / 6 / 6;     
+    row-gap: 25px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 90px; }
+
