--- a/src/styles/UserDailyActivity.scss
+++ b/src/styles/UserDailyActivity.scss
@@ -14,6 +14,11 @@
 
     h4 {
       margin: 0;
+      font-family: Roboto;
+      font-weight: 500;
+      font-size: 15px;
+      line-height: 24px;
+      letter-spacing: 0px;
     }
 
     .legend {
@@ -30,6 +35,15 @@
           width: 8px;
           height: 8px;
           border-radius: 50%;
+        }
+
+        .legendp{
+          font-family: Roboto;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 24px;
+          letter-spacing: 0px;
+          color: #74798C;
         }
 
         &--kg .dot {
