--- a/src/styles/UserName.scss
+++ b/src/styles/UserName.scss
@@ -1,4 +1,32 @@
-h1{
-    margin-block-end: 0;
-    margin-block-start: 0;
+h1 {
+  margin-block-end: 0;
+  //margin-block-start: 0;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 38px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  color: black; /* Bonjour reste noir */
+
+  .user-firstname {
+    color: red; /* Le prénom sera rouge */
+  }
 }
+
+p {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 24px;
+  letter-spacing: 0px;
+}
+
+.subtitle{
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0px;
+
+}
+
