--- a/src/styles/UserSessionActivity.scss
+++ b/src/styles/UserSessionActivity.scss
@@ -4,6 +4,12 @@
   background: #ff0000;
   border-radius: 10px;
   color: #fff;
+  
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 24px;
+  letter-spacing: 0px;
 
   width: 100%;
   height: 85%;        /* <- hauteur explicite pour le chart */
